force-app/main/default/objects/fboost__B_DelayedAsyncJob__c/fboost__B_DelayedAsyncJob__c.object-meta.xml
<CustomObject>
    <description>Boost Delayed Async Job</description>
    <label>Boost Delayed Async Job</label>
    <nameField>
        <displayFormat>Job-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boost Delayed Async Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>