force-app/main/default/objects/fboost__B_DelayedAsyncJob__c/fields/fboost__AddToQueueOnly__c.field-meta.xml
<CustomField>
    <fullName>fboost__AddToQueueOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if job will be executed right after adding to the queue</description>
    <inlineHelpText>Determines if job will be executed right after adding to the queue</inlineHelpText>
    <label>Add To Queue Only</label>
    <type>Checkbox</type>
</CustomField>