force-app/main/default/objects/fboost__B_DelayedAsyncJob__c/fields/fboost__NextExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>fboost__NextExecutionTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Determines next execution time (ms unix format)</description>
    <inlineHelpText>Determines next execution time (ms unix format)</inlineHelpText>
    <label>Next Execution Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>