force-app/main/default/objects/fboost__B_DelayedAsyncJob__c/fields/fboost__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>fboost__ProcessName__c</fullName>
    <description>Name of process - the class name that implements AsyncJob class</description>
    <externalId>true</externalId>
    <inlineHelpText>Name of process - the class name that implements AsyncJob class</inlineHelpText>
    <label>Process Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>