force-app/main/default/objects/fboost__B_DelayedAsyncJob__c/fields/fboost__Status__c.field-meta.xml
<CustomField>
    <fullName>fboost__Status__c</fullName>
    <description>Status of async job process</description>
    <externalId>true</externalId>
    <inlineHelpText>Status of async job process</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>