force-app/main/default/objects/fboost__B_DelayedAsyncJob__c/listViews/fboost__All.listView-meta.xml
<ListView>
    <fullName>fboost__All</fullName>
    <columns>NAME</columns>
    <columns>fboost__ProcessName__c</columns>
    <columns>fboost__RecordKey__c</columns>
    <columns>fboost__Status__c</columns>
    <columns>fboost__Attempt__c</columns>
    <columns>fboost__Error__c</columns>
    <columns>fboost__ExecutionStrategy__c</columns>
    <columns>fboost__FirstExecutionTime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>